feat: get member data
