# routes/users.ts
@@ -1,7 +1,7 @@
 import express from 'express'
 import bcrypt from 'bcrypt'
 import UserModal from '../models/User'
-
+import authMiddleware from '../service/authMiddleware'
 import { getJWTtoken, verifyJWTtoken } from '../utils/jwt'
 
 const router = express.Router()
@@ -189,7 +189,7 @@ router.post('/login', async function (req, res) {
       const isPasswordValid = await bcrypt.compare(`${password}`, userData.password)
 
       if (isPasswordValid) {
-        const token = getJWTtoken(email, userData.auth || 0)
+        const token = getJWTtoken(email, userData.auth || 0, userData.id)
         res.status(200).json({
           status: 'success',
           message: '登入成功',
@@ -274,6 +274,170 @@ router.post('/check-login', async function (req, res) {
         })
       }
     }
+  } catch (error) {
+    console.log(error)
+
+    res.status(500).json({
+      status: 'error',
+      message: '伺服器錯誤'
+    })
+  }
+})
+
+// 取得會員資料
+router.get('/', authMiddleware, async function (req, res) {
+  /**
+     * #swagger.tags = ['User']
+     * #swagger.description = '取得會員資料'
+     * #swagger.security = [{
+        token: []
+       }]
+    * #swagger.parameters['header'] = {
+        in: 'header',
+        name: 'authorization',
+        description: 'Bearer token',
+        required: true,
+        type: 'string'
+      }
+     * #swagger.responses[200] = {
+        description: '成功取得會員資料',
+        schema: {
+          "status": "success",
+          "message": "success",
+          "results": {
+            "email": "elsa@gmail.com",
+            "auth": 0,
+            "nickName": "Elsa",
+            "userName": "",
+            "gender": 0,
+            "phone": "",
+            "address": "",
+            "teamName": "",
+            "aboutMe": "",
+            "avatar": "",
+            "createTime": 1715098808,
+            "updateTime": 1715098808,
+            "id": "663a54b8c9225d0f16b55020"
+          }
+        },
+       }
+     * #swagger.responses[400] = {
+        description: '取得會員資料失敗',
+        schema: {
+          "status": "error",
+          "message": "無此會員"
+        },
+       }
+     *
+     */
+  try {
+    const { email } = (req as any).user
+
+    const userData = await UserModal.findOne({ email }, { password: 0 })
+    if (userData) {
+      res.status(200).json({
+        status: 'success',
+        message: 'success',
+        results: userData
+      })
+    } else {
+      res.status(400).json({
+        status: 'error',
+        message: '無此會員'
+      })
+    }
+  } catch (error) {
+    console.log(error)
+
+    res.status(500).json({
+      status: 'error',
+      message: '伺服器錯誤'
+    })
+  }
+})
+
+// 修改會員資料
+router.patch('/', authMiddleware, async function (req, res) {
+  /**
+     * #swagger.tags = ['User']
+     * #swagger.description = '修改會員資料'
+     * #swagger.security = [{
+        token: []
+       }]
+    * #swagger.parameters['header'] = {
+        in: 'header',
+        name: 'authorization',
+        description: 'Bearer token',
+        required: true,
+        type: 'string'
+      }
+      * #swagger.parameters['body'] = {
+        in: 'body',
+        description: '修改會員資料',
+        type: 'object',
+        required: true,
+        schema: {
+          nickName: 'elsa',
+          userName: 'elsa syu'
+      }
+     * #swagger.responses[200] = {
+        description: '修改會員資料',
+        schema: {
+          "status": "success",
+          "message": "修改會員資料成功",
+          "results": {
+            "email": "elsa@gmail.com",
+            "auth": 0,
+            "nickName": "Elsa",
+            "userName": "",
+            "gender": 0,
+            "phone": "",
+            "address": "",
+            "teamName": "",
+            "aboutMe": "",
+            "avatar": "",
+            "createTime": 1715098808,
+            "updateTime": 1715098808,
+            "id": "663a54b8c9225d0f16b55020"
+          }
+        },
+       }
+     * #swagger.responses[400] = {
+        description: '修改會員資料失敗',
+        schema: {
+          "status": "error",
+          "message": "無此會員 || 修改失敗"
+        },
+       }
+     *
+     */
+  try {
+    const { id } = (req as any).user
+    // const userData = await UserModal.findOne({ email }, { password: 0 })
+
+    // if (userData) {
+    // const { nickName, userName, gender, phone, address, teamName, aboutMe, avatar } = req.body
+    // 更新會員資料
+    await UserModal.findOneAndUpdate(id, req.body, function (err: any, updateData: any) {
+      if (err) {
+        res.status(400).json({
+          status: 'error',
+          message: '修改失敗'
+        })
+        return
+      }
+      res.status(200).json({
+        status: 'success',
+        message: '修改會員資料成功',
+        results: updateData
+      })
+    })
+    // } else {
+    //   res.status(400).json({
+    //     status: 'error',
+    //     message: '無此會員'
+    //   })
+    // }
   } catch (error) {
     console.log(error)
 
